--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Sprint1</title>
+  <link rel="stylesheet" href="https://bootswatch.com/3/sandstone/bootstrap.css">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
